--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Recipe Finder</title>
+    <title>FOOD FIGHT | Vegan Recipe Finder</title>
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap&text=FODIGHT" rel="stylesheet"> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
